--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,43 @@
-# This is a basic workflow to help you get started with Actions
+name: Host Grafana with Ngrok
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  setup-grafana:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      # Step 1: Checkout repository
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # Step 2: Set up Docker environment
+      - name: Set up Docker
+        run: sudo apt-get install docker.io
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Step 3: Run Grafana container
+      - name: Run Grafana Container
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker run -d -p 3000:3000 --name=grafana grafana/grafana
+
+      # Step 4: Install Ngrok
+      - name: Install Ngrok
+        run: |
+          sudo apt-get install unzip
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+          sudo apt-get update && sudo apt-get install ngrok
+
+      # Step 5: Run Ngrok to expose Grafana
+      - name: Expose Grafana using Ngrok
+        run: |
+          nohup ngrok http 3000 &
+          sleep 5
+          curl -s http://localhost:4040/api/tunnels | jq -r ".tunnels[0].public_url"
+
+      # Step 6: Output the public URL
+      - name: Show Grafana URL
+        run: echo "Your public Grafana URL is:"
