--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 on: [push]
 jobs:
-  Grafana_host:
+  jmeter_job:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,13 +31,18 @@ jobs:
       - name: Install jq
         run: sudo apt-get install jq
 
-      # Step 6: Run Ngrok to expose InfluxDB port 8086
+      # Step 6: Authenticate Ngrok
+      - name: Authenticate Ngrok
+        run: |
+          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+
+      # Step 7: Run Ngrok to expose InfluxDB port 8086
       - name: Expose InfluxDB using Ngrok
         run: |
           nohup ngrok http 8086 &
           sleep 10  # Increased sleep to allow Ngrok to fully initialize
 
-      # Step 7: Fetch Ngrok public URL
+      # Step 8: Fetch Ngrok public URL
       - name: Fetch Ngrok public URL
         run: |
           NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r ".tunnels[0].public_url")
