--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,32 +19,24 @@ jobs:
         run: |
           docker run -d -p 8086:8086 --name=influxdb influxdb
 
-      # Step 4: Install Ngrok
-      - name: Install Ngrok
+      # Step 4: Install Localtunnel
+      - name: Install Localtunnel
         run: |
-          sudo apt-get install unzip
-          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt-get update && sudo apt-get install ngrok
+          npm install -g localtunnel
 
-      # Step 5: Install jq to parse JSON
-      - name: Install jq
-        run: sudo apt-get install jq
-
-      # Step 6: Authenticate Ngrok
-      - name: Authenticate Ngrok
+      # Step 5: Expose InfluxDB using Localtunnel
+      - name: Expose InfluxDB with Localtunnel
         run: |
-          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+          lt --port 8086 --subdomain your-subdomain-name --local-host 127.0.0.1 > lt.log &
+          sleep 5  # Wait for Localtunnel to establish the connection
 
-      # Step 7: Run Ngrok to expose InfluxDB port 8086
-      - name: Expose InfluxDB using Ngrok
+      # Step 6: Fetch Localtunnel public URL
+      - name: Fetch Localtunnel URL
         run: |
-          nohup ngrok http 8086 &
-          sleep 20  # Increased sleep time to allow InfluxDB to fully initialize
-
-      # Step 8: Fetch Ngrok public URL
-      - name: Fetch Ngrok public URL
+          LT_URL=$(grep -o 'https://[a-z]*.loca.lt' lt.log | head -1)
+          echo "Your public InfluxDB URL is: $LT_URL"
+          
+      # Optional: Sleep for a specific time to keep the job running
+      - name: Keep job running
         run: |
-          NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r ".tunnels[0].public_url")
-          echo "Your public InfluxDB URL is: $NGROK_URL"
-          sleep 21600            
+          sleep 21600  # Adjust the sleep time as needed (6 hours here)
