--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,24 +19,20 @@ jobs:
         run: |
           docker run -d -p 8086:8086 --name=influxdb influxdb
 
-      # Step 4: Install PageKite
-      - name: Install PageKite
+      # Step 4: Install LocalTunnel
+      - name: Install LocalTunnel
         run: |
-          # Download PageKite binary
-          curl -L https://pagekite.net/dist/pagekite.py -o pagekite.py
-          chmod +x pagekite.py  # Make the script executable
+          npm install -g localtunnel
 
-      # Step 5: Expose InfluxDB using PageKite
-      - name: Expose InfluxDB using PageKite
+      # Step 5: Run LocalTunnel to expose InfluxDB port 8086
+      - name: Expose InfluxDB using LocalTunnel
         run: |
-          nohup python3 pagekite.py 8086 myinfluxdb.pagekite.me &  # Replace 'myinfluxdb' with your desired subdomain
-          sleep 10  # Wait for PageKite to initialize
+          lt --port 8086 --subdomain myuniqueid &  # Replace 'myuniqueid' with your desired subdomain
+          sleep 10  # Wait for LocalTunnel to initialize
 
-      # Step 6: Fetch PageKite public URL
-      - name: Fetch PageKite public URL
+      # Step 6: Fetch LocalTunnel URL
+      - name: Fetch LocalTunnel URL
         run: |
-          echo "Your InfluxDB is now exposed at http://myinfluxdb.pagekite.me"  # Replace 'myinfluxdb' with your chosen subdomain
-
-      # Step 7: Wait
-      - name: Wait
-        run: sleep 21600  # Sleep for 6 hours
+          LT_URL=$(curl -s http://localtunnel.me/api/tunnels | jq -r ".tunnels[0].public_url")
+          echo "Your public InfluxDB URL is: $LT_URL"
+          sleep 21600
