--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,24 +17,34 @@ jobs:
       # Step 3: Run InfluxDB container
       - name: Run InfluxDB Container
         run: |
-          sudo docker run -d -p 8086:8086 --name=influxdb influxdb
+          docker run -d -p 8086:8086 --name=influxdb influxdb
 
-      # Step 4: Install LocalTunnel
-      - name: Install LocalTunnel
+      # Step 4: Install Ngrok
+      - name: Install Ngrok
         run: |
-          sudo npm install -g localtunnel
+          sudo apt-get install unzip
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+          sudo apt-get update && sudo apt-get install ngrok
 
-      # Step 5: Run LocalTunnel to expose InfluxDB port 8086
-      - name: Expose InfluxDB using LocalTunnel
-        id: lt
-        run: |
-          sudo lt --port 8086 --subdomain myuniqueid > lt_output.txt &
-          sleep 5  # Wait for LocalTunnel to initialize
-          tail -n 10 lt_output.txt  # Print the last 10 lines of output for debugging
-          sudo wget -q -O - https://loca.lt/mytunnelpassword
+      # Step 5: Install jq to parse JSON
+      - name: Install jq
+        run: sudo apt-get install jq
 
-      # Step 6: Fetch LocalTunnel URL from output
-      - name: Fetch LocalTunnel URL
+      # Step 6: Authenticate Ngrok
+      - name: Authenticate Ngrok
         run: |
-          echo "Your LocalTunnel should provide the URL above."
-          sleep 1000
+          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+
+      # Step 7: Run Ngrok to expose InfluxDB port 8086
+      - name: Expose InfluxDB using Ngrok
+        run: |
+          nohup ngrok http 8086 &
+          sleep 20  # Increased sleep time to allow InfluxDB to fully initialize
+
+      # Step 8: Fetch Ngrok public URL
+      - name: Fetch Ngrok public URL
+        run: |
+          NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r ".tunnels[0].public_url")
+          echo "Your public InfluxDB URL is: $NGROK_URL"
+          sleep 21600            
