--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,25 +1,42 @@
-on: [push]
+name: Jenkins
+
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
 jobs:
-  Influx_DB:
+  build:
     runs-on: ubuntu-latest
 
-    steps: 
-      # Step 1: Checkout repository
+    steps:
+      # Step 1: Checkout the repository
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # Step 2: Install Docker
-      - name: Install Docker
+      # Step 2: Set up Docker Compose file
+      - name: Create Docker Compose File
         run: |
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sudo sh get-docker.sh
+          echo "
+          version: '3.8'
+          services:
+            jenkins:
+              image: jenkins/jenkins:lts
+              container_name: jenkins
+              ports:
+                - '8080:8080'
+                - '50000:50000'
+              volumes:
+                - jenkins_home:/var/jenkins_home
+              restart: always
+              environment:
+                JAVA_OPTS: '-Djenkins.install.runSetupWizard=false'
+          " > docker-compose.yml
 
-      # Step 3: Run InfluxDB container with persistent volume
-      - name: Run InfluxDB Container with Volume
-        run: |
-          docker run -d -p 8086:8086 --name=influxdb \
-          -v ${{ github.workspace }}/influxdb_data:/var/lib/influxdb \
-          influxdb
+      # Step 3: Start Jenkins using Docker Compose
+      - name: Start Jenkins
+        run: docker-compose up -d
 
       # Step 4: Install Ngrok
       - name: Install Ngrok
@@ -38,36 +55,20 @@ jobs:
         run: |
           ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
-      # Step 7: Run Ngrok to expose InfluxDB port 8086
-      - name: Expose InfluxDB using Ngrok
+      # Step 7: Run Ngrok to expose Jenkins port 8080
+      - name: Expose Jenkins using Ngrok
         run: |
-          nohup ngrok http 8086 &
-          sleep 20  # Increased sleep time to allow InfluxDB to fully initialize
+          nohup ngrok http 8080 &
+          sleep 20  # Allow time for Jenkins and Ngrok to fully initialize
 
       # Step 8: Fetch Ngrok public URL
       - name: Fetch Ngrok public URL
         run: |
           NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r ".tunnels[0].public_url")
-          echo "Your public InfluxDB URL is: $NGROK_URL"
+          echo "Your public Jenkins URL is: $NGROK_URL"
           sleep 21600
 
-      # Step 9: Upload InfluxDB data as artifact periodically (Backup 1)
-      - name: Upload InfluxDB Data as Artifact (Backup 1)
-        uses: actions/upload-artifact@v3
-        with:
-          name: influxdb-data-backup-1
-          path: influxdb_data
-
-      # Step 10: Run periodic artifact uploads (Backup 2)
-      - name: Upload InfluxDB Data as Artifact (Backup 2)
-        uses: actions/upload-artifact@v3
-        with:
-          name: influxdb-data-backup-2
-          path: influxdb_data
-
-      # Final Step: Upload final InfluxDB data as artifact
-      - name: Upload InfluxDB Data as Final Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: influxdb-data-final
-          path: influxdb_data
+      # Step 9: Stop Docker Compose
+      - name: Stop Docker Compose
+        if: always()
+        run: docker-compose down
