--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,43 +1,25 @@
-name: Jenkins
-
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+on: [push]
 jobs:
-  build:
+  Influx_DB:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+    steps: 
+      # Step 1: Checkout repository
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # Step 2: Set up Docker Compose file
-      - name: Create Docker Compose File
+      # Step 2: Install Docker
+      - name: Install Docker
         run: |
-          echo "
-          version: '3.8'
-          services:
-            jenkins:
-              image: jenkins/jenkins:lts
-              container_name: jenkins
-              ports:
-                - '8080:8080'
-                - '50000:50000'
-              volumes:
-                - jenkins_home:/var/jenkins_home
-              restart: always
-              environment:
-                JAVA_OPTS: '-Djenkins.install.runSetupWizard=false'
-          " > docker-compose.yml
-
-      # Step 3: Start Jenkins using Docker Compose
-      - name: Start Jenkins
-        run: docker-compose up -d
-
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sudo sh get-docker.sh
+      # Step 3: Run InfluxDB container with persistent volume
+      - name: Run InfluxDB Container with Volume
+        run: |
+          docker run -d -p 8086:8086 --name=influxdb \
+          -v ${{ github.workspace }}/influxdb_data:/var/lib/influxdb \
+          influxdb
       # Step 4: Install Ngrok
       - name: Install Ngrok
         run: |
@@ -45,7 +27,6 @@ jobs:
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt-get update && sudo apt-get install ngrok
-
       # Step 5: Install jq to parse JSON
       - name: Install jq
         run: sudo apt-get install jq
@@ -54,21 +35,13 @@ jobs:
       - name: Authenticate Ngrok
         run: |
           ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
-
-      # Step 7: Run Ngrok to expose Jenkins port 8080
-      - name: Expose Jenkins using Ngrok
+      # Step 7: Run Ngrok to expose InfluxDB port 8086
+      - name: Expose InfluxDB using Ngrok
         run: |
-          nohup ngrok http 8080 &
-          sleep 20  # Allow time for Jenkins and Ngrok to fully initialize
-
+          nohup ngrok http 8086 &
+          sleep 20  # Increased sleep time to allow InfluxDB to fully initialize
       # Step 8: Fetch Ngrok public URL
       - name: Fetch Ngrok public URL
         run: |
           NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r ".tunnels[0].public_url")
-          echo "Your public Jenkins URL is: $NGROK_URL"
-          sleep 21600
-
-      # Step 9: Stop Docker Compose
-      - name: Stop Docker Compose
-        if: always()
-        run: docker-compose down
+          echo "Your public InfluxDB URL is: $NGROK_URL"
