--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    steps: 
       # Step 1: Checkout repository
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -14,32 +13,37 @@ jobs:
         run: |
           curl -fsSL https://get.docker.com -o get-docker.sh
           sudo sh get-docker.sh
+
       # Step 3: Run InfluxDB container with persistent volume
       - name: Run InfluxDB Container with Volume
         run: |
           docker run -d -p 8086:8086 --name=influxdb \
           -v ${{ github.workspace }}/influxdb_data:/var/lib/influxdb \
           influxdb
+
       # Step 4: Install Ngrok
       - name: Install Ngrok
         run: |
-          sudo apt-get install unzip
+          sudo apt-get install unzip -y
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt-get update && sudo apt-get install ngrok
+          sudo apt-get update && sudo apt-get install ngrok -y
+
       # Step 5: Install jq to parse JSON
       - name: Install jq
-        run: sudo apt-get install jq
+        run: sudo apt-get install jq -y
 
       # Step 6: Authenticate Ngrok
       - name: Authenticate Ngrok
         run: |
           ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+
       # Step 7: Run Ngrok to expose InfluxDB port 8086
       - name: Expose InfluxDB using Ngrok
         run: |
           nohup ngrok http 8086 &
           sleep 20  # Increased sleep time to allow InfluxDB to fully initialize
+
       # Step 8: Fetch Ngrok public URL
       - name: Fetch Ngrok public URL
         run: |
