--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
       # Step 6: Authenticate Ngrok
       - name: Authenticate Ngrok
         run: |
-          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+          ngrok authtoken ${{secrets.NGROK_AUTH_TOKEN_1}}
 
       # Step 7: Run Ngrok to expose InfluxDB port 8086
       - name: Expose InfluxDB using Ngrok
